<resources>
    <string name="app_name">AR Control</string>
    <string name="glasses_disconnected">Очки: отключены</string>
    <string name="camera_idle">Камера: ожидание</string>
    <string name="camera_source">Источник камеры</string>
    <string name="camera_source_xreal">Очки XREAL</string>
    <string name="camera_source_android">Камера телефона</string>
    <string name="enable_camera">Включить камеру</string>
    <string name="start_preview">Запустить просмотр</string>
    <string name="stop_preview">Остановить просмотр</string>
    <string name="record_video">Запись видео</string>
    <string name="object_detection">Объекты</string>
    <string name="face_recognition">Лица</string>
    <string name="clear_faces">Очистить лица</string>
    <string name="transparent_hud">Transparent HUD</string>
    <string name="gemma_subtitles">Субтитры Gemma</string>
    <string name="download_gemma_model">Скачать модель Gemma</string>
    <string name="cancel_gemma_model_download">Отменить загрузку Gemma</string>
    <string name="cancel_gemma_model_download_progress">Отменить загрузку Gemma: %1$s</string>
    <string name="gemma_model_download_notification_channel">Загрузки моделей Gemma</string>
    <string name="gemma_model_download_notification_title">Загрузка модели Gemma</string>
    <string name="gemma_model_download_notification_starting">Загрузка начинается</string>
    <string name="gemma_model_not_configured">Модель Gemma: не настроена</string>
    <string name="gemma_model_configured">Модель Gemma: %1$s</string>
    <string name="gemma_prompt_title">Промпт Gemma</string>
    <string name="gemma_prompt_hint">Что модель должна сказать в субтитрах</string>
    <string name="apply_gemma_prompt">Применить промпт</string>
    <string name="recorded_clips">Записанные клипы</string>
    <string name="no_recorded_clips">Записей пока нет</string>
    <string name="open_clip">Открыть</string>
    <string name="open_clip_unavailable">Нет приложения для открытия клипа</string>
    <string name="share_clip">Поделиться</string>
    <string name="delete_clip">Удалить</string>
    <string name="delete_clip_confirmation">Удалить клип %1$s?</string>
    <string name="clip_details">%1$s • %2$dx%3$d</string>
    <string name="preview_recording_starting">Запись запускается</string>
    <string name="preview_recording_active">Идет видеозапись</string>
    <string name="preview_recording_finalizing">Запись завершается</string>
    <string name="preview_recording_failed">Ошибка записи: %1$s</string>
    <string name="share_logs">Поделиться логами</string>
    <string name="share_logs_subject">AR Control diagnostics</string>
    <string name="exit_preview">Выйти из просмотра</string>
    <string name="recovery_mode_title">Включен режим восстановления</string>
    <string name="recovery_mode_message">Предыдущий просмотр или запись завершились неожиданно. Камера и запись отключены, пока вы не подтвердите повторное тестирование.</string>
    <string name="re_enable_camera_testing">Снова включить тест камеры</string>
    <string name="re_enable_camera_testing_title">Снова включить тест камеры?</string>
    <string name="re_enable_camera_testing_message">Предыдущий сеанс камеры или записи завершился с ошибкой. Повторное включение может воспроизвести сбой. Продолжайте, только если готовы собрать и отправить логи.</string>
    <string name="broken_clip_metadata">Данные поврежденного клипа: %1$s</string>
    <string name="launch_guard_title">Доступна диагностика сбоя</string>
    <string name="launch_guard_default_message">Предыдущий запуск завершился неожиданно. Поделитесь логами перед повторным открытием приложения.</string>
    <string name="open_main_app_anyway">Все равно открыть приложение</string>
    <string name="close_app">Закрыть приложение</string>
</resources>
